Use Map.of() consistently.