@@ -26,8 +26,8 @@ import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.IOException;
 import java.sql.ResultSet;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.springframework.jdbc.core.JdbcOperations;
 import org.springframework.jdbc.core.PreparedStatementCallback;
 import org.springframework.jdbc.core.PreparedStatementCreator;
@@ -96,7 +96,7 @@ public class JdbcChargePointActionStatusDao implements ChargePointActionStatusDa
 		requireNonNullArgument(processor, "processor");
 		final PreparedStatementCreator sql = new SelectChargePointActionStatus(filter);
 		final RowMapper<ChargePointActionStatus> mapper = ChargePointActionStatusRowMapper.INSTANCE;
-		processor.start(null, null, null, Collections.emptyMap());
+		processor.start(null, null, null, Map.of());
 		try {
 			jdbcOps.execute(sql, (PreparedStatementCallback<Void>) ps -> {
 				try (ResultSet rs = ps.executeQuery()) {
